footer link target blank

--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -259,7 +259,7 @@
                     Version number: {{ APP_VERSION_NAME }}
                 </div>
                 <div class="col">
-                    <a href="{% url 'shortener:url_redirect' slug='khoblog-github-repo' %}">
+                    <a href="{% url 'shortener:url_redirect' slug='khoblog-github-repo' %}" target="_blank" rel="noopener noreferrer">
                         <i class="bi bi-github"></i> Github
                     </a>
                 </div>
