post image doesn't get too big

--- a/blog/templates/blog/base_post_card.html
+++ b/blog/templates/blog/base_post_card.html
@@ -76,7 +76,7 @@
             </div>
 
             {% if post.image %}
-                <img src="{{ post.image.url }}" alt="Post image" />
+                <img src="{{ post.image.url }}" class="post-image" alt="Post image" />
             {% endif %}
 
             <div class="card-text">
