--- a/blog/templates/blog/lists/series_list.html
+++ b/blog/templates/blog/lists/series_list.html
@@ -1,5 +1,5 @@
 {% extends 'blog/base_post.html' %}
-{% load static markdown_extra %}
+{% load static %}
 
 {% block content_main %}
     <div class="row row-cols-1 row-cols-lg-3 me-0">
