--- a/blog/templates/blog/includes/post_offcanvas.html
+++ b/blog/templates/blog/includes/post_offcanvas.html
@@ -1,7 +1,7 @@
 <!-- Off Canvas -->
-<div class="offcanvas offcanvas-end" data-bs-scroll="false" tabindex="-1" id="postOffCanvas-{{ post.id }}" aria-labelledby="postOffCanvas-{{ post.id }}Label">
+<div class="offcanvas offcanvas-end" data-bs-scroll="false" tabindex="-1" id="postOffCanvas-{{ post.slug }}" aria-labelledby="postOffCanvas-{{ post.slug }}Label">
     <div class="offcanvas-header">
-        <h5 class="offcanvas-title" id="postOffCanvas-{{ post.id }}Label">{{ post.title }} - #{{ post.id }}</h5>
+        <h5 class="offcanvas-title" id="postOffCanvas-{{ post.slug }}Label">{{ post.title }} - #{{ post.id }}</h5>
         <button type="button" class="btn btn-secondary" data-bs-dismiss="offcanvas" aria-label="Close">Close</button>
     </div>
     <div class="offcanvas-body">
