some more small changes

--- a/blog/templates/blog/includes/featured_posts.html
+++ b/blog/templates/blog/includes/featured_posts.html
@@ -7,7 +7,7 @@
                 <strong class="d-inline-block mb-2 text-uppercase fst-italic">Featured Post</strong>
                 <h1 class="display-4">{{ featured_big_post.title }}</h1>
                 <p class="lead">{{ featured_big_post.description }}</p>
-                <a class="btn btn-primary" href="{{ featured_big_post.get_absolute_url }}">Continue Reading</a>
+                <a class="btn btn-primary" href="{{ featured_big_post.get_absolute_url }}">Continue reading</a>
             </div>
         </div>
     {% endwith %}
@@ -42,7 +42,7 @@
                     <p class="mb-auto">{{ post.description }}</p>
                 </div>
                 <div class="card-footer">
-                    <a class="card-link" href="{{ post.get_absolute_url }}">Continue Reading</a>
+                    <a class="card-link" href="{{ post.get_absolute_url }}">Continue reading</a>
                 </div>
             </div>
         </div>
