--- a/blog/templates/blog/lists/category_list.html
+++ b/blog/templates/blog/lists/category_list.html
@@ -63,7 +63,7 @@
                     <div class="card-footer">
                         <span class="d-flex">
                             <span class="col">
-                                <a class="card-link" href="{{ cat.get_absolute_url }}">See all posts in this Category</a>
+                                <a class="card-link" href="{{ cat.get_absolute_url }}">Posts in this category</a>
                             </span>
                         </span>
                     </div>
