--- a/blog/templates/blog/lists/series_list.html
+++ b/blog/templates/blog/lists/series_list.html
@@ -43,12 +43,12 @@
                     <div class="card-body">
                         <h3 class="card-title">{{ series.title }}</h3>
                         <p class="mb-auto">{{ series.description }}</p>
-                        <p class="mb-auto">Series Slug: {{ series.slug }}</p>
+                        <p class="mb-auto">Series slug: {{ series.slug }}</p>
                     </div>
                     <div class="card-footer">
                         <span class="d-flex">
                             <span class="col">
-                                <a class="card-link" href="{{ series.get_absolute_url }}">See all posts in this Series</a>
+                                <a class="card-link" href="{{ series.get_absolute_url }}">Posts in this series</a>
                             </span>
                         </span>
                     </div>
