--- a/blog/templates/blog/lists/series_list.html
+++ b/blog/templates/blog/lists/series_list.html
@@ -48,7 +48,7 @@
                     <div class="card-footer">
                         <span class="d-flex">
                             <span class="col">
-                                <a class="card-link" href="{{ series.get_absolute_url }}">Posts in this series</a>
+                                <a class="card-link" href="{{ series.get_absolute_url }}">All posts in {{ series.title }}</a>
                             </span>
                         </span>
                     </div>
