--- a/blog/templates/blog/lists/tags_list.html
+++ b/blog/templates/blog/lists/tags_list.html
@@ -35,7 +35,7 @@
                     </div>
                     <div class="card-body">
                         <h3 class="card-title">{{ tag }}</h3>
-                        <p class="mb-auto">Tag Slug: {{ tag.slug }}</p>
+                        <p class="mb-auto">Tag slug: {{ tag.slug }}</p>
                     </div>
                     <div class="card-footer">
                         <span class="d-flex">
