removed the cap of some words

--- a/portfolio/templates/portfolio/project_list.html
+++ b/portfolio/templates/portfolio/project_list.html
@@ -9,7 +9,7 @@
                     <strong class="d-inline-block mb-2 text-uppercase fst-italic">Featured Project</strong>
                     <h1 class="display-4">{{ project.title }}</h1>
                     <p class="lead">{{ project.snippet }}</p>
-                    <a class="btn btn-primary" href="{{ project.get_absolute_url }}">Continue Reading</a>
+                    <a class="btn btn-primary" href="{{ project.get_absolute_url }}">Continue reading</a>
                 </div>
             </div>
         {% endif %}
