--- a/blog/templates/blog/news_summary.html
+++ b/blog/templates/blog/news_summary.html
@@ -25,7 +25,7 @@
 
     {% if not hide_readmore %}
         <div class="card-footer">
-            <a class="card-link" href="{{ object.get_absolute_url }}">Continue Reading</a>
+            <a class="card-link" href="{{ object.get_absolute_url }}">Continue reading</a>
         </div>
     {% endif %}
 </div>
