--- a/blog/templates/blog/includes/post_offcanvas.html
+++ b/blog/templates/blog/includes/post_offcanvas.html
@@ -31,6 +31,9 @@
             {% if post.modified_date %}
                 <p class="mb-0">Updated: {{ post.modified_date|date:'l, d F Y H:i:s' }}</p>
             {% endif %}
+            {% if post.featured_title %}
+                <p>Featured Title: {{ post.featured_title }}</p>
+            {% endif %}
         </div>
 
         <p>Description: {{ post.description }}</p>
