--- a/blog/templates/blog/includes/featured_posts.html
+++ b/blog/templates/blog/includes/featured_posts.html
@@ -2,22 +2,22 @@
 
 {% if featured_big %}
     {% with featured_big|random as featured_big_post %}
-        <div class="card p-4 rounded shadow">
-            <div class="container">
+        <article class="card p-4 rounded shadow">
+            <section class="container">
                 <strong class="d-inline-block mb-2 text-uppercase fst-italic">Featured Post</strong>
                 <h1 class="display-4">{{ featured_big_post.title }}</h1>
                 <p class="lead">{{ featured_big_post.description }}</p>
                 <a class="btn btn-primary" href="{{ featured_big_post.get_absolute_url }}">Continue reading</a>
-            </div>
-        </div>
+            </section>
+        </article>
     {% endwith %}
 {% endif %}
 
-<div class="row row-cols-1 row-cols-lg-2 me-0">
+<section class="row row-cols-1 row-cols-lg-2 me-0">
     {% for post in featured %}
-        <div class="mt-2 pe-0">
-            <div class="card shadow h-100">
-                <div class="card-header">
+        <section class="mt-2 pe-0">
+            <article class="card shadow h-100">
+                <header class="card-header">
                     <strong>
                         {% if post.get_featured_cat %}
                             <a class="card-link" href="{{ post.get_featured_cat.category.get_absolute_url }}">{{ post.featured_cat_title|capfirst }}</a>
@@ -25,11 +25,11 @@
                             <a class="card-link" href="{{ post.categories.first.get_absolute_url }}">{{ post.categories.first|capfirst }}</a>
                         {% endif %}
                         <span class="d-inline-block text-muted">
-                            • <span class="fst-italic">Featured Post</span>
+                            • <em>Featured Post</em>
                         </span>
                     </strong>
-                </div>
-                <div class="card-body">
+                </header>
+                <section class="card-body">
                     <h3 class="card-title text-word-wrap mb-0">{{ post.title }}</h3>
                     <div class="mb-0">{% include 'blog/includes/post_dates.html' %}</div>
                     <p class="mb-2 text-small text-muted">
@@ -40,11 +40,11 @@
                         {% endif %}
                     </p>
                     <p class="mb-auto">{{ post.description }}</p>
-                </div>
-                <div class="card-footer">
+                </section>
+                <section class="card-footer">
                     <a class="card-link" href="{{ post.get_absolute_url }}">Continue reading</a>
-                </div>
-            </div>
-        </div>
+                </section>
+            </article>
+        </section>
     {% endfor %}
-</div>
+</section>
