--- a/blog/templates/blog/lists/post_list.html
+++ b/blog/templates/blog/lists/post_list.html
@@ -8,7 +8,7 @@
     {% endblock page_top_featured %}
 
     {% if previous_year or next_year or previous_month or next_month or previous_week or next_week or previous_day or next_day %}
-        <div class="w-100">
+        <nav class="w-100">
             {% if previous_year or next_year %}
                 <div>
                     {% if previous_year %}
@@ -56,7 +56,7 @@
                     {% endif %}
                 </div>
             {% endif %}
-        </div>
+        </nav>
     {% endif %}
 
     {% block page_top_hr %}
@@ -69,17 +69,17 @@
 
 {% block content_main %}
 
-    <div class="row row-cols-1 row-cols-lg-3 me-0">
+    <section class="row row-cols-1 row-cols-lg-3 me-0">
         {% for post in posts %}
-            <div class="mb-2 pe-0">
+            <section class="mb-2 pe-0">
                 {% include 'blog/post_card_in_lists.html' %}
-            </div>
+            </section>
 
             {% comment %} {% include 'blog/includes/post_offcanvas.html' %} {% endcomment %}
         {% empty %}
-            <div class="w-100">
+            <section class="w-100">
                 <p>No content here.</p>
-            </div>
+            </section>
         {% endfor %}
-    </div>
+    </section>
 {% endblock content_main %}
