--- a/blog/templates/blog/includes/featured_posts.html
+++ b/blog/templates/blog/includes/featured_posts.html
@@ -25,7 +25,7 @@
                             <a class="card-link" href="{{ post.categories.first.get_absolute_url }}">{{ post.categories.first|capfirst }}</a>
                         {% endif %}
                         <span class="d-inline-block text-muted">
-                            • <em>Featured Post</em>
+                            • <span class="fst-italic">Featured Post</span>
                         </span>
                     </strong>
                 </header>
