--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -31,7 +31,7 @@
             {% render_comment_form for post %}
             <hr />
 
-            <p class="text-muted text-small">This post has {{ comment_count }} comments.</p>
+            <p class="text-muted text-small">This post has {{ comment_count }} comment{{ comment_count|pluralize:'s' }}.</p>
 
             {% render_comment_list for post %}
         {% else %}
